--- a/form.html
+++ b/form.html
@@ -30,12 +30,12 @@
        <p> <b><i><ul><li>Та́нець, танок</i></b> — вид мистецтва, де художні образи створюються засобами пластичних рухів людського тіла. В танці відображається емоційно-образний зміст музичних творів. Танець існував та існує в культурних традиціях всього людства й людських спільнот. За довгу історію людства танець змінювався, відображаючи культурний розвиток.</li</ul>
         </p>
         <h1 id="classic"><b><i>Класичні танці</i></b></h1>
-        <img src="img/classic.jpg" alt="Класичний танець">
+        <img src="/classic.jpg" alt="Класичний танець">
         <p>
         Класичний танець — система виразних засобів хореографічного мистецтва, що базується на ретельній розробці різних груп рухів та позицій ніг, рук, корпусу й голови, з'явилась у XVII столітті.
         </p>
         <h2 id="narod"> <b><i>Народні Танці</i></b></h2>
-        <img src="img/narod.jpg" alt="Народний танець">
+        <img src="/narod.jpg" alt="Народний танець">
         <p>
         Народні танці займають значне місце в культурі кожного народу й етносу земної кулі поряд із народною піснею та народними звичаями. Частково народні танці, наприклад, хороводи мають обрядовий характер.
 
@@ -44,12 +44,12 @@
 Серед народних танців інших народів світу можна відзначити такі як жок, жемжурка, класичні індійські танці, танець живота, зіка, краков'як, трепак, лезгінка, атан, болеро, гальярда, фламенко.
         </p>
         <h3 id="modern"><b><i>Сучасні танці</i></b></h3>
-        <img src="img/modern.jpg" alt="Сучасний танець">
+        <img src="/modern.jpg" alt="Сучасний танець">
         <p>
         Сучасні танці – це сукупність різних найпопулярніших та найновіших стилів хореографії, ними можуть займатись як діти так і дорослі. В кожного століття були свої сучасні танці, в 21 столітті до сучасних танців відносяться : контемп, модерн, джаз, джаз – фанк, хіп – хоп, брейкданс , і багато інших.
         </p>
        <h4 id="bal"><b><i>Бальні танці</i></b></h4>
-       <img src="img/ball.jpg" alt="Бальний танець">
+       <img src="/ball.jpg" alt="Бальний танець">
        <p>
        Бальні танці - різновид танців із партнером, які танцюють як для задоволення на балах та вечірках, так і на танцювальних змаганнях.
 
@@ -74,7 +74,7 @@
 </ul>
        </p>
        <h5 id="street"><b><i>Вуличний танець</i></b></h5>
-       <img src="img/street.jpg" alt="Вуличний танець">
+       <img src="/street.jpg" alt="Вуличний танець">
        <p>
        Загальна назва <i>вуличний танець<i> обіймає всі стилі сучасного танцю, що розвинулися за межами танцювальних студій та шкіл: на вулицях, шкільних подвір'ях, у нічних клубах. Вуличні танці часто імпровізаційні та соціальні за своїм призначенням.
 </p>
@@ -94,11 +94,11 @@
        </p>
         
     <h6 id="balet"><b><i>Балет</i></b></h6>
-    <img src="img/balet.jpg" alt="Балет">
+    <img src="/balet.jpg" alt="Балет">
 <p>
 Балет - синкретичний вид сценічного мистецтва, вистава із цілісним сюжетом, в якій засобами танцю передаються почуття персонажів. Танець у балеті має свою особливу техніку, якій потрібно довго й змалечку навчатися. На основі балету в 20-му і 21-му столітті розвинулися нові форми, такі, як танц-модерн, сучасний балет, контемпорарі-денс. Мистецтво постановки балету та інших сценічних танців потребує спеціально навчених людей - хореографів, балетмейстрів.
 
-Зазвичай, так само як опера, балет залежить від масштабного наративу. Рухи та жести використовуються для того, щоб відобразити особистість персонажів та тієї ролі, яку вони відіграють у сюжеті. Ці театральні потреби вимагають довших, вільніших рухів, ніж у ненаративнивних стилях танцю. У 19-столітті, проте, виник білий балет, що дозволяє включення ритмічного танцю, а в 20-му столітті з нього розвинувся повністю безсюжетний балет[6]. Відомий приклад такого включення — танець лебедят у другій дії «Лебединого озера».
+Зазвичай, так само як опера, балет залежить від масштабного наративу. Рухи та жести використовуються для того, щоб відобразити особистість персонажів та тієї ролі, яку вони відіграють у сюжеті. Ці театральні потреби вимагають довших, вільніших рухів, ніж у ненаративнивних стилях танцю. У 19-столітті, проте, виник білий балет, що дозволяє включення ритмічного танцю, а в 20-му столітті з нього розвинувся повністю безсюжетний балет. Відомий приклад такого включення — танець лебедят у другій дії «Лебединого озера».
 
 Балет розвинувся з придворних драматичних постановок 16-го та 17-го століття у Франції та Італії, і впродовж тривалого часу танцюристи виконнували танці, що виникли з форми музичних суїт, що використовували ритми танцю. В еру романтичного націоналізму така форма танцю була характерною.
 
@@ -106,7 +106,7 @@
 </p>
    
     <h8 id="history"><b><i>Історичні Танці</i></b></h8>
-    <img src="img/history.jpg" alt="Історичний танець">
+    <img src="/history.jpg" alt="Історичний танець">
     <p>
     Історичними танцями називають здебільшого європейські танці, популярні в певну епоху на балах знаті. Багато з цих танців виросли з народних, однак набрали вишуканого культурного стилю. Популярні історичні танці змінювалися з епохами. До них належать павана, гальярда, контрданс, менует, мазурка, полонез, кадриль та інші.
     </p>
