--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <h1><b><i>Dance Studio Luna</i></b></h1>
 
 	
-	<p>
+	<br>
     Любиш танцювати? Хочеш навчитися чи далі розвивати свій талант? Шукаєш професіональних хореографів? 
     <nav> <a href="#Контакти"><b>Тоді тобі до нас!</b></a>
 
-    </nav></p>
+    </nav>
     </header>
 <body>
     
 
-	<img src="img/dance.jpg" alt="Танець">
+	<img src="dance.jpg" alt="Танець">
 	<p>
 		<b><i>Dance Studio Luna</i></b> - це танцювальна студія, де кожен заново народжується в танці! Діти і дорослі
 		від 3-х років осягають у нас ази і тонкощі Contemporary, Hip-Hop і Jazz Funk. Наші професійні педагоги шліфують
