--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
         Класичний танець — система виразних засобів хореографічного мистецтва, що базується на ретельній розробці різних груп рухів та позицій ніг, рук, корпусу й голови, з'явилась у XVII столітті.
         </p>
         <h2 id="narod"> <b><i>Народні Танці</i></b></h2>
-        <img src="/narod.jpg" alt="Народний танець">
+        <img src="img/narod.jpg" alt="Народний танець">
         <p>
         Народні танці займають значне місце в культурі кожного народу й етносу земної кулі поряд із народною піснею та народними звичаями. Частково народні танці, наприклад, хороводи мають обрядовий характер.
 
