--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     </nav>
     </header>
- 
-	<img src="dance.jpg" alt="Танець">
+ <div>
+	<a> <img src="/dance.jpg" alt="Танець"> </a>
+ </div>
 	<p>
 		<b><i>Dance Studio Luna</i></b> - це танцювальна студія, де кожен заново народжується в танці! Діти і дорослі
 		від 3-х років осягають у нас ази і тонкощі Contemporary, Hip-Hop і Jazz Funk. Наші професійні педагоги шліфують
