--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
         Класичний танець — система виразних засобів хореографічного мистецтва, що базується на ретельній розробці різних груп рухів та позицій ніг, рук, корпусу й голови, з'явилась у XVII столітті.
         </p>
         <h2 id="narod"> <b><i>Народні Танці</i></b></h2>
-        <img src="img/narod.jpg" alt="Народний танець">
+        <img src="narod.jpg" alt="Народний танець">
         <p>
         Народні танці займають значне місце в культурі кожного народу й етносу земної кулі поряд із народною піснею та народними звичаями. Частково народні танці, наприклад, хороводи мають обрядовий характер.
 
@@ -44,7 +44,7 @@
 Серед народних танців інших народів світу можна відзначити такі як жок, жемжурка, класичні індійські танці, танець живота, зіка, краков'як, трепак, лезгінка, атан, болеро, гальярда, фламенко.
         </p>
         <h3 id="modern"><b><i>Сучасні танці</i></b></h3>
-        <img src="/modern.jpg" alt="Сучасний танець">
+        <img src="modern.jpg" alt="Сучасний танець">
         <p>
         Сучасні танці – це сукупність різних найпопулярніших та найновіших стилів хореографії, ними можуть займатись як діти так і дорослі. В кожного століття були свої сучасні танці, в 21 столітті до сучасних танців відносяться : контемп, модерн, джаз, джаз – фанк, хіп – хоп, брейкданс , і багато інших.
         </p>
