--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     </nav>
     </header>
- <div>
-	<a> <img src="/dance.jpg" alt="Танець"> </a>
- </div>
+ 
+	<img src="https://yt3.ggpht.com/a/AGF-l7-vE4-Zv4udghdgCResveY0WsW4EOXnuJ66jg=s900-c-k-c0xffffffff-no-rj-mo" alt="dance">
+ 
 	<p>
 		<b><i>Dance Studio Luna</i></b> - це танцювальна студія, де кожен заново народжується в танці! Діти і дорослі
 		від 3-х років осягають у нас ази і тонкощі Contemporary, Hip-Hop і Jazz Funk. Наші професійні педагоги шліфують
